0.5.0 - TBD

* Added width and height attributes to layer element (can be different from map
  width and height)
* Added layer properties, analoguous to tile and map properties
* Added Rainer's shared images code
* Added support for object placement
* Fixed determining the relative path to tileset images
* New tilesets can have tiles auto-created from images

0.4.2 - October 14th, 2004

* Added a JNLP for WebStart, contributed by Chris Hazen
* Added a simple plugin for the Mappy FMAP format maps
* Added a plugin dialog for information about plugins
* Added plugin target for building bundled plugins
* Removed API usage deprecated by Java 5.0
* Fixed a NullPointerException when loading plugins
* Fixed layer naming on undo (issue #75)

0.4.1 - September 24th, 2004

* Added search/replace functionality
* Added tooltips to buttons
* Added map save/load plugin support
* Added marquee selections
* Added HexMapView, contributed by Andreas Mross (experimental)
* Removed name and version attributes from map, custom properties suffice there
* Removed name attribute from tile for same reason
* More intelligent starting locations for file choosers
* Grid display is now configurable (opacity, antialiasing)
* Fixes to tileset editing dialog
* Fixed config file saving to stop adding newlines to the config file
* Fixed window close button to behave the same as File->Exit
* Fixed undo/redo for moving layers
* Fixed moving a duplicated layer to no longer move original too

0.4.0 - August 4th, 2004

* TiledConfiguration defaults to preset values initially, Tiled should now
  work fine if there is no initial configuration file
* Layer rotation and flipping
* Map resizing (warning: cannot be undone yet)
* Custom properties on tiles and map
* A file filter on loading and saving for .tmx and .tsx
* Several UI improvements (usage of JSplitPane and JSpinner for example)
* Small changes to the map format (updated DTD)
* Implemented a better underlying architecture for Maps and Brushes