@@ -12,6 +12,7 @@
 
 package tiled.mapeditor.util;
 
+import java.util.Enumeration;
 import java.util.Properties;
 import javax.swing.table.AbstractTableModel;
 
@@ -75,6 +76,17 @@ public class PropertiesTableModel extends AbstractTableModel
 
     }
 
+    public void remove(int row) {
+    	Enumeration e = properties.elements();
+    	for(int i=0;e.hasMoreElements(); i++) {
+    		Object key = e.nextElement();
+    		if(i==row) {
+    			properties.remove(key);
+    			break;
+    		}
+    	}
+    }
+    
     public void update(Properties props) {
         properties = props;
     }
